--- a/css/layouts/_home.scss
+++ b/css/layouts/_home.scss
@@ -227,6 +227,9 @@ $brand-bg-color: $brand-white;
 		position: relative;
 		padding-bottom: 230px;
 		padding-top: 20px;
+		@media(max-width: 575px){
+			margin: 100px 0;
+		}
 	}
 	.logo{
 		position: relative;
@@ -482,6 +485,9 @@ $brand-bg-color: $brand-white;
 }
 .cas-menu{
 	margin-top: 120px;
+	@media(max-width:575px){
+		margin: 50px auto!important;
+	}
 	.item{
 		position: relative;
 	}
